Update swagger & auth routes
